fixed archaic styling issues
font size and borders, especially the menu panel button borders not aligning with the right panel as a whole

--- a/src/App.css
+++ b/src/App.css
@@ -197,8 +197,6 @@ html, body {
 .bg-header, .main {
   color: var(--editorTextColour) !important;
   background-color: var(--tertiaryColour) !important;
-  
-  
 }
 
 .dontShow:hover {
@@ -250,6 +248,11 @@ html, body {
   height: 45.375vh; /* this is to get rid of that useless white space on the bottom of the page */
   overflow-x:hidden !important;
   scrollbar-color: var(--tertiaryColour) var(--secondaryColour) !important; /* affects both editor & processed text areas */
+}
+
+.headerButtons {
+  background-color: var(--tertiaryColour) !important;
+  border-radius:none !important;
 }
 
 /* scrollbar for the right panel */
@@ -319,6 +322,54 @@ html, body {
   background-color: var(--checkboxBackgroundColour) !important;
 }
 
+/* custom for menu labels to sync their widths  */
+.menu_label_subject {
+  width: 12vh;
+  height: 5vh;
+}
+
+.menu_label_value, .menu_label_subject_minor {
+  width: 8.5vh;
+  height: 5vh;
+  background-color: var(--secondaryColour);
+  color: var(--editorTextColour) !important;
+  border-color: var(--foreground);
+  font-family: var(--font); 
+  
+}
+
+.proc {
+  resize: none;
+}
+
+.menuNavBar {
+  background-color: var(--primaryColour) !important;
+  
+}
+
+.btn-selected, .menuBtn, .btn-group {
+  border-radius:0% !important;
+}
+
+#menuBtns {
+  background-color: var(--secondaryColour);
+  overflow-x:auto;
+  width: 100%;
+  border-radius:none !important;
+}
+
+.editor {
+  display: block;
+  background-color: var(--secondaryColour); 
+  font-family: monospace;
+  overflow:auto !important;
+
+}
+
+.centerAligned {
+  text-align: center;
+}
+
 /* .div, .btn, span#cpm_label, .form-control, .input-group-text, .input-group, .h6, .menu_label_subject, .menu_label_value {
   color: pink !important;
   
@@ -362,43 +413,3 @@ html, body {
     transform: rotate(360deg);
   }
 }
-
-/* custom for menu labels to sync their widths  */
-.menu_label_subject {
-  width: 12vh;
-  height: 5vh;
-}
-
-.menu_label_value, .menu_label_subject_minor {
-  width: 8.5vh;
-  height: 5vh;
-  background-color: var(--secondaryColour);
-  color: var(--quaternaryColour) !important;
-  border-color: var(--foreground);
-  font-family: var(--font); 
-}
-
-.proc {
-  resize: none;
-}
-
-.editor {
-  display: block;
-  background-color: var(--secondaryColour); 
-  font-family: monospace;
-  overflow:auto !important;
-
-}
-/* .cm-line {
-  font-size: 4px;
-} */
-
-.centerAligned {
-  text-align: center;
-}
-
-/* .header {
-  color: black !important;
-  height: 60px;
-  
-} */
